fix spacing for folder icons; add spirit gifs

--- a/css/top.css
+++ b/css/top.css
@@ -46,6 +46,8 @@ h6 {
 .window {
   width: 80%;
   margin: 2em auto;
+  position: relative;
+  z-index: 5;
 }
 .modal {
   width: 40%;
@@ -242,8 +244,11 @@ h6 {
   flex-flow: row wrap;
 }
 .finder-main .content figure, .folder.sei9 figure, .folder.spirit figure {
+  width: 100px;
   margin: 20px 6px;
   cursor: pointer;
+  display: flex;
+  flex-flow: column nowrap;
 }
 .finder-main .content figcaption, .folder.sei9 figcaption, .folder.spirit figcaption {
   margin: 16px 6px;
@@ -252,7 +257,7 @@ h6 {
 }
 .finder-main .content img, .folder.sei9 img, .folder.spirit img {
   width: 60px;
-  height: 50px;
+  margin: auto;
 }
 .folder.ga {
   width: 50px;
@@ -266,7 +271,6 @@ h6 {
 }
 .folder.sei9, .folder.spirit {
   position: absolute;
-  z-index: -1;
 }
 .folder.sei9 {
   bottom: 9em;
